invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_72.src
.IPPcode24
STRI2INT TF@b